# EnStock

./: .gitignore  README.md  database.db  output.csv  pyproject.toml  sqlc.yaml
src/enstock/: __init__.py  ai.py  cli.py  data.py  database.py  dialog.py  main.py  models.py  test.py  user_input.py
src/enstock/db/: models.py  sku_maps.py  suppliers.py  uoms.py
src/enstock/db/models/: __init__.py  base_model.py  brand.py  label.py  product.py  sku_map.py  supplier.py  uom.py
src/queries/: sku_maps.sql  suppliers.sql  uoms.sql
src/schema/: schema.sql
src/sql/: schema.sql
